# spotlight-dimmer

./: .gitignore  .npmignore  AGENTS.md  App.xaml  App.xaml.cs  AssemblyInfo.cs  BUILD_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  Cargo.toml  DimmerWindow.xaml  DimmerWindow.xaml.cs  Directory.Build.props  Directory.Build.targets  FIX_SUMMARY.md  GlobalUsings.cs  LEIAME.md  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  PUBLISHING.md  Program.cs  README.md  SpotlightDimmer.csproj  SpotlightDimmer.sln  TestWinUI3Renderer.md  VS_CODE_WINUI3_ANSWER.md  WINUI3_BRANCH_README.md  WinUI3_Renderer_Summary.md  build.rs  config.example.json  config.schema.json  custom-installer-template.nsi  icon.rc  package.json  packager.toml  spotlight-dimmer-arm64.iss  spotlight-dimmer-x64.iss  spotlight-dimmer.iss  (+1 more)
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.claude/: settings.local.json
.claude/commands/: check-ci.md  check.md  commit.md  publish-minor.md  publish-patch.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.devcontainer/thomaz/: README.md  devcontainer.json  post-create.sh
.docs/: incremental-refactor-plan.md  polling-to-events-migration-report.md
.github/prompts/: QUICKSTART.md  README.md  check-ci.prompt.md  check.prompt.md  commit.prompt.md  publish-minor.prompt.md  publish-patch.prompt.md
.github/scripts/: Generate-WingetManifests.ps1  extract_changelog.py  update_changelog.py
.github/workflows/: ci.yml  release.yml  test-arm64.yml  winget-publish.yml
Core/: AppConfig.cs  ConfigurationManager.cs  DimmingMode.cs  OverlayRegion.cs  Primitives.cs
Models/: DimmerSettings.cs  DimmerState.cs  Rect.cs  WindowsEventsManager.cs
Settings/: DimmerSettings.cs
SpotlightDimmer/: Program.cs  SpotlightDimmer.csproj  TestOverlayCalculator.cs
SpotlightDimmer.Config/: ConfigForm.Designer.cs  ConfigForm.cs  Program.cs  SpotlightDimmer.Config.csproj
SpotlightDimmer.Core/: AppConfig.cs  AppState.cs  ConfigurationManager.cs  FocusChangeHandler.cs  IOverlayUpdateService.cs  SchemaInjector.cs  SpotlightDimmer.Core.csproj
SpotlightDimmer.Core/Properties/: AssemblyInfo.cs
SpotlightDimmer.Documentation/: DIRECTCOMPOSITION_COMWRAPPERS_IMPLEMENTATION.md  RENDERER_PHASE2_DIRECTCOMPOSITION.md
SpotlightDimmer.SchemaGenerator/: Program.cs  README.md  SpotlightDimmer.SchemaGenerator.csproj
SpotlightDimmer.Scripts/: Build-Installer.ps1  Extract-Changelog.ps1  Generate-Schema.ps1  Install-Latest.ps1  Move-UnreleasedToVersion.ps1
SpotlightDimmer.Tests/: AppStateTests.cs  FocusChangeHandlerTests.cs  SpotlightDimmer.Tests.csproj  TestSchemaProperty.cs
SpotlightDimmer.WinUI3Renderer/: IOverlayRenderer.cs  SpotlightDimmer.WinUI3Renderer.csproj  WinUI3Renderer.cs
SpotlightDimmer.WindowsClient/: LoggingConfiguration.cs  Program.cs  SpotlightDimmer.WindowsClient.csproj
SpotlightDimmer.WindowsClient/WindowsBindings/: AutoStartManager.cs  CompositeOverlayRenderer.cs  CompositionRenderer.cs  DirectCompositionApi.cs  DisplayChangeMonitor.cs  DoubleBufferedRenderer.cs  FocusTracker.cs  IOverlayRenderer.cs  LayeredWindowRenderer.cs  LegacyLayeredWindowRenderer.cs  MonitorManager.cs  OverlayRenderer.cs  SystemTrayManager.cs  UpdateLayeredWindowRenderer.cs  WinApi.cs  WinUI3Renderer.cs
SpotlightDimmer/Core/: AppConfig.cs  AppState.cs  ConfigurationManager.cs  DisplayOverlayState.cs  OverlayCalculationConfig.cs
SpotlightDimmer/WindowsBindings/: DisplayChangeMonitor.cs  FocusTracker.cs  MonitorManager.cs  OverlayRenderer.cs  SystemTrayManager.cs  WinApi.cs
State/: DimmerStateManager.cs
WindowsBindings/: OverlayRenderer.cs  SystemTrayManager.cs  WinApi.cs
docs/: TMUX_SETUP.md  WINGET_SETUP.md  WINUI3_RENDERER_COMPARISON.md  WINUI3_RUNTIME_FIX.md
dotnet/: .gitignore  FocusTracker.cs  MonitorManager.cs  OverlayWindow.cs  Program.cs  README.md  TestOverlayCalculator.cs  TestWindowMovement.cs  WinApi.cs
dotnet/Core/: AppConfig.cs  DisplayInfo.cs  DisplayOverlayState.cs  OverlayCalculator.cs  OverlayDefinition.cs
dotnet/WindowsBindings/: FocusTracker.cs  MonitorManager.cs  OverlayRenderer.cs  WinApi.cs
manifests/t/ThomazMoura/SpotlightDimmer/: 0.5.5.installer.yaml
rust/: Cargo.toml  FEATURE_ACTIVE_OVERLAY_RESIZE.md  NPM_SETUP.md  PUBLISHING.md  build.rs  index.js  install.ps1  uninstall.ps1
rust/docs/: TMUX_SETUP.md
rust/manifests/t/ThomazMoura/SpotlightDimmer/: 0.5.5.yaml
rust/scripts/: install.js
rust/src/: config.rs  lib.rs  message_window.rs  overlay.rs  tmux_overlay.rs  windows_terminal.rs
rust/src/platform/: mod.rs  windows.rs
scripts/: uninstall.js
src/: Cargo.toml  autostart.rs  config.rs  config_cli.rs  lib.rs  main_new.rs  message_window.rs  overlay.rs  tmux_overlay.rs  tmux_watcher.rs  tray.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/platform/: mod.rs  windows.rs
src/platform/: mod.rs  windows.rs
src/src/: config.rs  main_new.rs  overlay.rs
