[package]
name = "spotlight-dimmer"
version = "0.7.2"
description = "A lightweight application that dims inactive displays to highlight the active one"
authors = ["Thomaz Moura"]
license = "MIT"
repository = "https://github.com/thomazmoura/spotlight-dimmer"
homepage = "https://github.com/thomazmoura/spotlight-dimmer"
readme = "README.md"
edition = "2021"
rust-version = "1.77.2"
keywords = ["desktop", "monitor", "display", "windows", "overlay"]
categories = ["gui", "multimedia", "os::windows-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spotlight-dimmer"
path = "src/main_new.rs"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "spotlight-dimmer-config"
path = "src/config_cli.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
lazy_static = "1.4"
widestring = "1.0"
auto-launch = "0.5"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "windef",
    "wingdi",
    "processthreadsapi",
    "psapi",
    "libloaderapi",
    "errhandlingapi",
    "handleapi",
    "wincon",
    "consoleapi",
    "shellapi",
    "dwmapi",
    "fileapi",
    "synchapi",
    "winbase",
    "winerror"
] }

[build-dependencies]
embed-resource = "2.4"

[dev-dependencies]
tempfile = "3.8"
serde_json = "1.0"
cargo-husky = { version = "1", features = ["user-hooks"] }

[package.metadata.packager]
product_name = "Spotlight Dimmer"
identifier = "com.thomazmoura.spotlight-dimmer"
publisher = "Thomaz Moura"
authors = ["Thomaz Moura"]
homepage = "https://github.com/thomazmoura/spotlight-dimmer"
license_file = "LICENSE"

icons = ["src/icons/icon.ico"]

binaries = [
    { path = "spotlight-dimmer.exe", main = true },
    { path = "spotlight-dimmer-config.exe", main = false }
]

resources = [
    "spotlight-dimmer-icon.ico",
    "spotlight-dimmer-icon-paused.ico",
    "README.md",
    "LICENSE"
]

[package.metadata.packager.nsis]
installMode = "currentUser"
compression = "lzma"
languages = ["English"]
displayLanguageSelector = false
installerIcon = "src/icons/icon.ico"
