[package]
name = "spotlight-dimmer"
version = "0.1.0"
description = "A cross-platform application that dims inactive displays to highlight the active one"
authors = ["Spotlight Dimmer Team"]
license = "MIT"
repository = "https://github.com/your-username/spotlight-dimmer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spotlight_dimmer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
tauri = { version = "2.8.5", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tokio = { version = "1.0", features = ["full"] }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "windef",
    "wingdi",
    "processthreadsapi",
    "psapi",
    "libloaderapi",
    "errhandlingapi",
    "dwmapi",
    "handleapi"
] }
